# chatglm4-web-desktop

./: .dockerignore  .env.example  .gitignore  CLAUDE_CODE_INTEGRATION.md  Cargo.toml  DAYTONA_SETUP.md  Dockerfile  INSTALLATION.md  Makefile  QUICKSTART_WINDOWS.md  README.md  README_FRONTEND.md  TESTING_REPORT.md  TESTING_VALIDATION_REPORT.md  build.ps1  config.toml  config.yaml  docker-compose.yml  fix-html.js  index.html  install.js  next.config.js  package.json  pnpm-lock.yaml  start-app.bat  start-app.ps1  tailwind.config.js  tsconfig.json  update-icon.bat  vite.config.ts  vitest.config.ts
.github/workflows/: ci-cd.yml
.next/: trace
.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
electron/: main.js  preload.js
electron/assets/: README.md
nginx/: nginx.conf
scripts/: generate-icons.js
shell/: API-KEY-SETUP.md  CLAUDE_CODE_INTEGRATION.md  DAYTONA_SETUP.md  DEPLOYMENT.md  README_ELECTRON.md  build-electron.ps1  build-frontend.ps1  build.sh  start-app-with-port-check.bat  start-app.bat  start-app.ps1  stop-all-services.bat
src/: env.d.ts  lib.rs  main.rs  main.tsx
src/__tests__/: ChatInterface.test.tsx
src/api/: chat.rs  functions.rs  mod.rs  models.rs  settings.rs  websocket.rs
src/client/: client.rs  error.rs  mod.rs  streaming.rs  types.rs
src/components/: ChatInterface.tsx  ClaudeCodeIntegration.tsx  CodePreview.tsx  CodeSandbox.tsx  DevServerManager.tsx  (+10 more)
static/: index.html
web-search-service/: README.md  check-port.bat  install-as-service.bat  package.json  server.js  start-web-search.bat
(+43 files in other folders)
