[package]
name = "chatglm-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# JSON Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"

# Configuration
dotenv = "0.15"
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Environment Variables
once_cell = "1.19"

# UUID Generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# DateTime Handling
chrono = { version = "0.4", features = ["serde"] }

# Additional Utilities
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
# Testing Framework
tokio-test = "0.4"
mockito = "1.2"
futures-util = "0.3"
wiremock = "0.5"
assert_matches = "1.5"
proptest = "1.4"
test-case = "3.3"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"
